# big-data-workshop-may-2024

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml
scripts/: build-and-push-codeartifact.sh  build-and-push-ecr.sh  create-fake-data.sh  upload_index_to_s3.sh
src/create_data/: base.py  create_measurements.py  main.py
src/create_data/tests/: test_create_measurements.py
src/dag/: download_data.py  schedule_dagster.py
src/download_data/: main.py
src/make_data/: base.py  main.py
src/process_data/: base.py  in_pandas.py  main.py  non_compressed.py
src/process_data/dask/: main.py
src/process_data/duckdb/: main.py
src/process_data/pandas/: main.py
src/process_data/polars/: main.py
src/start_here/: main.py
