[tool.poetry]
name = "big-data-workshop"
version = "0.0.1"
description = "GDG Big Data Workshop"
authors = ["ybressler"]
readme = "README.md"
packages = [{include = "../"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.93"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
respx = "^0.21.1"
pytest-cov = "^5.0.0"
pytest-freezegun = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.ruff.lint]
ignore = ["F811"]  # Allow re-imports

[tool.ruff.format]
quote-style = "double"
