[tool.poetry]
name = "big-data-workshop"
version = "0.0.1"
description = "GDG Big Data Workshop"
authors = ["ybressler"]
readme = "README.md"
packages = [{include = "src/"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.93"
httpx = "^0.27.0"
numpy = "^1.26.4"
polars = "^0.20.26"
tqdm = "^4.66.4"
pgzip = "^0.3.5"
requests = "^2.32.2"
pandas = "^2.2.2"
parallel-pandas = "^0.6.2"
dask = "^2024.5.1"
dask-expr = "^1.1.1"
bs4 = "^0.0.2"
duckdb = "^0.10.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
respx = "^0.21.1"
pytest-cov = "^5.0.0"
pytest-freezegun = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"






[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.ruff.lint]
ignore = ["F811"]  # Allow re-imports

[tool.ruff.format]
quote-style = "double"
